# image-compressor-gtk

./: README.md  cu.axel.ImageCompressor.json  meson.build
data/: cu.axel.ImageCompressor.appdata.xml.in  cu.axel.ImageCompressor.desktop.in  cu.axel.ImageCompressor.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: imagecompressor.gresource.xml  imagecompressor.in  main.py  meson.build  window.blp  window.py
